tests/miniJava/neg/000080_mutation.MiniJava
class java { 0 static void Main ( String [ ] java ) { { } } }
